--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@source "../views";
 
 p {
     @apply leading-[1.6];
