--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,12 @@
 @import "tailwindcss";
 @import "flowbite";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 p {
     @apply leading-[1.6];
+}
+
+.w-11{
+    @apply w-[11.11%];
 }
 
 .datatable-top {
