Nomenclature large name in cell COMPLETE TODO: Notification bell in progress 1/2

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -36,9 +36,9 @@
     }
 }
 
-* {
+/* {
     border-color: hsl(var(--border));
-}
+}*/
 .hover\:bg-accent:hover {
     background-color: hsl(var(--accent));
 }
