Main content y scroll FIXED Making Dashboard Design (in progress 3/4) TODO: Make Dashboard Functionality

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,6 +34,10 @@
     [type="checkbox"], [type="radio"]{
         color: hsl(var(--accent));
     }
+    .no-scroll {
+        height: 100vh;
+        overflow: hidden;
+    }
 }
 
 /* {
