Schedule component creation in progress (33/50) (Scheduler full rework IN PROGRESS) Day view complete (1/2) Making Dashboard Design (in progress 3/4) TODO: Make Dashboard Functionality, Schedule component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -102,7 +102,7 @@
 }
 
 @theme {
-    --font-display: "Lufga SemiBold", "sans-serif";
+    --font-display: "Lufga SemiBold";
 
     --color-brand-light: #F4F5EF;
     --color-brand-primary: #FFE37C;
