--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -56,6 +56,15 @@
         background-color: theme('colors.gray.400');
         z-index: 5;
     }
+    .day-grid-top-panel-border::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 2px;
+        background-color: theme('colors.gray.400');
+        z-index: 5;
+    }
     ::-webkit-scrollbar {
         height: 12px; /* высота горизонтального */
         width: 12px;  /* для вертикального */
