Schedule component creation in progress (35/50) (Scheduler full rework IN PROGRESS) Day view complete (4/8) Making Dashboard Design (in progress 3/4) TODO: Make Dashboard Functionality, Schedule component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -50,7 +50,7 @@
     .day-right-border::after {
         content: "";
         position: absolute;
-        top: 0;
+        right: 0;
         width: 2px;
         height: 100%;
         background-color: theme('colors.gray.400');
