Schedule component creation in progress (43/50) (Scheduler full rework IN PROGRESS) TaskSteps component complete (1/3) Day view complete (7/8) Making Dashboard Design (in progress 3/4) TODO: Make Dashboard Functionality, Schedule component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -89,6 +89,12 @@
     }
 }
 
+select option:checked,
+select option[selected] {
+    background-color: #ecfdf5;
+    color: #065f46;
+}
+
 /* {
     border-color: hsl(var(--border));
 }*/
