Schedule component creation in progress (44/50) (Scheduler full rework IN PROGRESS) TaskSteps component complete (2/3) Day view complete (7/8) Making Dashboard Design (in progress 3/4) TODO: Make Dashboard Functionality, Schedule component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -116,6 +116,13 @@ select option[selected] {
     background-color: hsl(var(--background));
 }
 
+@layer utilities {
+    .text-xs {
+        font-size: 11px;
+        line-height: 1rem;
+    }
+}
+
 @theme {
     --font-display: "Lufga SemiBold";
 
